--- a/BookBee/src/main/resources/templates/home.html
+++ b/BookBee/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Apresentação</title>
 </head>
 
@@ -11,7 +11,7 @@
     
     <main>
         <div class="logo">
-            <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/logo.png" alt="logo">
+            <img src="img/logo.png" alt="logo">
         </div>
         <div class="bemvindo">Seja Bem-Vindo ao</div>
         
@@ -23,27 +23,27 @@
         <div class="botoes">
             
             <div class="botaologin">
-                <a href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/templates/login.html" target="_blank">
+                <a href="/login" target="_blank">
                 <button>Login</button>
             </a>
         </div>
         <div class="botaocadastro">
-            <a href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/templates/cadastro.html" target="_blank">
+            <a href="/cadastro" target="_blank">
                 <button>Cadastro</button>
             </a>
         </div>
         </div>
 <div class="container">
     <div class="livro1">
-        <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">
         <p>Clássicos</p>
     </div>
     <div class="livro2">
-        <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">
         <p>Romances</p>
     </div>
     <div class="livro3">
-        <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">
         <p>Novelas</p>
     </div>
 </div>
