--- a/BookBee/src/main/resources/templates/home.html
+++ b/BookBee/src/main/resources/templates/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/css/style.css">
-    <title>Apresentação</title>
+    <script src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/js/semscroll.js"></script>
+    <title>Home</title>
 </head>
 
 <body>
@@ -47,11 +48,6 @@
         <p>Novelas</p>
     </div>
 </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            document.body.style.overflowY = "hidden";
-        });
-</script>
     </main>
 </body>
 </html>
