--- a/BookBee/src/main/resources/templates/cadastro.html
+++ b/BookBee/src/main/resources/templates/cadastro.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/css/style.css">
-    <script src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/js/mostrasenha.js"></script>
-    <script src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/js/semscroll.js"></script>
+    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
+    <script src="/BookBee/src/main/resources/static/js/semscroll.js"></script>
+
+<!--link rel="stylesheet" href="/static/css/style.css">
+    <script src="/js/semscroll.js"></script>-->
 
     <title>Cadastro</title>
 </head>
@@ -15,7 +17,7 @@
     <main>
         <div class="containerlogocas">
             <div class="logofixacas">
-                    <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/logo.png" alt="logo">
+                    <img src="/BookBee/src/main/resources/static/img/logo.png" alt="logo">
             </div>
         </div>
         
@@ -24,7 +26,7 @@
         </div>
     
         <div class="formcadastro">
-            <form action="/users/criar" method="post">
+            <form action="" method="post">
                 <label for="Nome">Nome</label>
                 <input name="nome" type="text" id="nome" placeholder="Digite seu Nome" >
                 
@@ -35,14 +37,16 @@
                 <input name="senha" type="password" required id="senha" placeholder="Insira sua Senha" >
                 <div class="logar">
                     <ul>
-                        <li>Já cadastrado? <a href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/templates/login.html">Faça seu Login!</a></li>
+                        <li>Já cadastrado? <a href="/BookBee/src/main/resources/templates/login.html">Faça seu Login!</a></li>
+                   <!-- <li>Já cadastrado? <a href="/login.html">Faça seu Login!</a></li>--> 
                     </ul>
                 </div>
                 
                 
                 </div>
                 <div class="botaocadastro1">
-                    <a href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/templates/principal.html" target="_blank">
+                    <a href="/BookBee/src/main/resources/templates/principal.html">
+                <!--<a href="/BookBee/src/main/resources/templates/principal.html">-->
                         <button>Cadastro</button>
                     </a>
                 </div>
@@ -51,15 +55,17 @@
     
     <div class="container">
         <div class="livro04">
-            <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <p>Terror/Horror</p>
+            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
         </div>
         <div class="livro05">
-            <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
-            <p>Aventura</p>
+            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+         <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
+        <p>Aventura</p>
         </div>
         <div class="livro06">
-            <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
             <p>Fantasia</p>
         </div>
     </div>
