--- a/BookBee/src/main/resources/templates/home.html
+++ b/BookBee/src/main/resources/templates/home.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/js/semscroll.js"></script>
+    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
+    <script src="/BookBee/src/main/resources/static/js/semscroll.js"></script>
+
+<!--<link rel="stylesheet" href="/css/style.css">
+    <script src="/js/semscroll.js"></script>-->
     <title>Home</title>
 </head>
 
@@ -12,7 +15,8 @@
     
     <main>
         <div class="logo">
-            <img src="img/logo.png" alt="logo">
+            <img src="/BookBee/src/main/resources/static/img/logo.png" alt="logo">
+            <!--<img src="/img/logo.png" alt="logo">-->
         </div>
         <div class="bemvindo">Seja Bem-Vindo ao</div>
         
@@ -24,30 +28,37 @@
         <div class="botoes">
             
             <div class="botaologin">
-                <a href="/login" target="_blank">
+                <a href="/BookBee/src/main/resources/templates/login.html">
+            <!--<a href="/login">-->
                 <button>Login</button>
             </a>
         </div>
         <div class="botaocadastro">
-            <a href="/cadastro" target="_blank">
+            <a href="/BookBee/src/main/resources/templates/cadastro.html">
+       <!-- <a href="/cadastro">-->
                 <button>Cadastro</button>
             </a>
         </div>
         </div>
 <div class="container">
     <div class="livro1">
-        <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+    <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
         <p>Clássicos</p>
     </div>
     <div class="livro2">
-        <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
         <p>Romances</p>
     </div>
     <div class="livro3">
-        <img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+        <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
         <p>Novelas</p>
     </div>
 </div>
+
+
     </main>
 </body>
 </html>
