--- a/BookBee/src/main/resources/templates/login.html
+++ b/BookBee/src/main/resources/templates/login.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/css/style.css">
-    <script src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/js/mostrasenha.js"></script>
-    <script src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/js/semscroll.js"></script>
+    <link rel="stylesheet" href="/BookBee/src/main/resources/static/css/style.css">
+    <script src="/BookBee/src/main/resources/static/js/mostrasenha.js"></script>
+    <script src="/BookBee/src/main/resources/static/js/semscroll.js"></script>
 
+<!--link rel="stylesheet" href="/static/css/style.css">
+    <script src="/js/mostrasenha.js"></script>
+    <script src="/js/semscroll.js"></script>-->
+    
     <title>Login</title>
 </head>
 
@@ -15,7 +19,7 @@
     <main>
         <div class="containerlogo">
             <div class="logofixa">
-                    <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/logo.png" alt="logo">
+                    <img src="/BookBee/src/main/resources/static/img/logo.png" alt="logo">
             </div>
         </div>
         
@@ -37,13 +41,13 @@
                     <ul>
                         <li>
                             <span class="cores">Não Cadastrado? </span>
-                            <a href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/templates/cadastro.html">
+                            <a href="/BookBee/src/main/resources/templates/cadastro.html">
                                 Crie sua conta!</a>
                             </li>
                     </ul>
                 </div>
                 <div class="botaologin1">
-                    <a href="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/templates/principal.html" target="_blank">
+                    <a href="/BookBee/src/main/resources/templates/principal.html" target="_blank">
                     <button>Login</button>
         </div>
     
@@ -51,15 +55,18 @@
     
     <div class="container">
         <div class="livro01">
-            <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
             <p>Contos</p>
         </div>
         <div class="livro02">
-            <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
             <p>Poesias</p>
         </div>
         <div class="livro03">
-            <img src="/projeto-web-full-stack-girls-time/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <img src="/BookBee/src/main/resources/static/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+            <!--<img src="img/icons8-favos-de-mel-48.png" alt="hexagonos">-->    
             <p>Não-Ficção</p>
         </div>
     </div>
