--- a/BookBee/src/main/resources/templates/main.html
+++ b/BookBee/src/main/resources/templates/main.html
@@ -188,6 +188,40 @@
         </div>
     </div>
 
+    <div class="meu-carrossel-container">
+        <button class="meu-carousel-arrow-esquerda" aria-label="imagem-anterior" onclick="moverCarrosselEsquerda()"> 
+            <img src="/BookBee/src/main/resources/static/img/ordenar-para-esquerda.png" alt="" onmouseover="this.src='/BookBee/src/main/resources/static/img/ordenar-para-esquerda-preenchido.png'" onmouseout="this.src='/BookBee/src/main/resources/static/img/ordenar-para-esquerda.png'">
+        </button>
+        <button class="meu-carousel-arrow-direita" aria-label="próxima-imagem" onclick="moverCarrosselDireita()">
+            <img src="/BookBee/src/main/resources/static/img/ordenar-para-a-direita.png" alt="" onmouseover="this.src='/BookBee/src/main/resources/static/img/ordenar-para-a-direita-preenchido.png'" onmouseout="this.src='/BookBee/src/main/resources/static/img/ordenar-para-a-direita.png'">    
+        </button>
+        <div class="meu-carousel-wrapper">
+            <div class="meu-carousel-gallery">
+                <div class="caixa-notas">
+                    <img class="meu-item carousel-item-atual" src="https://books.google.com/books/content?id=ud06EAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                    <div class="conteudo">
+                        <h5>1 - Lorem</h5>
+                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                    </div>
+                </div>
+                <div class="caixa-notas">
+                    <img class="meu-item carousel-item-atual" src="https://books.google.com/books/content?id=8hJfEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                    <div class="conteudo">
+                        <h5>1 - Lorem</h5>
+                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                    </div>
+                </div>
+                <div class="caixa-notas">
+                    <img class="meu-item carousel-item-atual" src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                    <div class="conteudo">
+                        <h5>1 - Lorem</h5>
+                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </main>
 
 <script src="/BookBee/src/main/resources/static/js/carrossel.js"></script>
