--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -823,6 +823,8 @@ body {
     z-index: 999;
     position: absolute;
     transition: .5s;
+    padding: 0;
+    border-radius: 10px;
 }
 
 .informacaoLivro {
@@ -834,10 +836,13 @@ body {
     color: white;
     overflow: hidden;
     margin-top: 3px;
+    padding: 0;
+    border-radius: 15px;
 }
 
 .informacaoLivro p {
     margin: 0 10px 5px 10px;
+    color: #FFF;
 }
 
 .estilizacaoLidos li:hover img {
@@ -895,13 +900,14 @@ body {
 .gallery{
     display: flex;
     flex-flow: row nowrap;      
-    gap:15px;
+    gap: 25px;
 }
 
 .gallery img{
     width: 500px;
     height: 250px;
-    padding-left: 22px;
+    padding: 0px;
+    border-radius: 5px;
 }
 
 .container-carrossel button{
@@ -911,7 +917,7 @@ body {
 }
 
 .container-carrossel button img{
-    width: 90px;
+    width: 80px;
     cursor: pointer;
 }
 
@@ -924,7 +930,7 @@ body {
 .arrow-rigth{
     position: absolute;
     margin-top: 80px;
-    margin-left: 960px;
+    margin-left: 970px;
 }
 
 .gallery-wrapper::-webkit-scrollbar {
@@ -986,13 +992,14 @@ body {
 .carousel-gallery{
     display: flex;
     flex-flow: row nowrap;      
-    gap:15px;
+    gap: 25px;
 }
 
 .carousel-gallery img{
     width: 500px;
     height: 250px;
-    padding-left: 22px;
+    padding: 0px;
+    border-radius: 5px;
 }
 
 .carousel-container button{
@@ -1002,7 +1009,7 @@ body {
 }
 
 .carousel-container button img{
-    width: 90px;
+    width: 80px;
     cursor: pointer;
 }
 
@@ -1015,7 +1022,7 @@ body {
 .carousel-arrow-right{
     position: absolute;
     margin-top: 80px;
-    margin-left: 960px;
+    margin-left: 970px;
 }
 
 .carousel-wrapper::-webkit-scrollbar {
@@ -1060,4 +1067,99 @@ body {
     float: right;
     margin-right: 90px;
     margin-top: -57px;
+}
+
+/*carrossel notas pessoais*/
+.meu-carrossel-container{
+    position: relative;
+    padding: 15px;
+    max-width: 970px;
+
+    margin-left: 310px;
+}
+
+.meu-carousel-wrapper{
+    overflow-x: auto;
+}
+
+.meu-carousel-gallery{
+    display: flex;
+    flex-flow: row nowrap;      
+    gap: 37px;
+    height: 170px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.caixa-notas{
+    width: 360px;
+    height: 150px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #878C69;
+    box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+.conteudo {
+    display: flex; /* Torna os elementos filhos flexíveis */
+    flex-direction: column;
+    margin-left: 120px;
+    margin-top: -170px;
+}
+
+.caixa-notas img{
+    width: 120px;
+    height: 170px;
+    z-index: 1;
+    margin-top: -9px;
+    margin-left: -10px;
+    border-radius: 5px;
+}
+
+.conteudo h2, p {
+    margin-top:-10px ;
+    font-size: 14px;
+    color: #3E4320; /* Cor do título e texto */
+}
+
+.meu-carrossel-container button{
+    background: transparent;
+    border: 0;
+}
+
+.meu-carrossel-container button img{
+    width: 80px;
+    cursor: pointer;
+}
+
+.meu-carousel-arrow-esquerda{
+    position: absolute;
+    margin-top: 40px;
+    margin-left: -70px;
+}
+
+.meu-carousel-arrow-direita{
+    position: absolute;
+    margin-top: 40px;
+    margin-left: 970px;
+}
+
+.meu-carousel-wrapper::-webkit-scrollbar {
+    display: none;
+  }
+
+.meu-carousel-wrapper{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.container-detalhes{
+    margin-top: 40px;
+    margin-left: 400px;
+    
+}
+
+.container-detalhes img{
+    width: 230px;
+    height: 350px;
 }
