--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -1154,12 +1154,62 @@ body {
 }
 
 .container-detalhes{
+    width: 600px;
     margin-top: 40px;
-    margin-left: 400px;
-    
+    margin-left: 490px;
+    background-color: #A7886C;
+    filter: drop-shadow(5px 6px 10px rgba(0, 0, 0, 0.25));
+    border-radius: 10px;
 }
 
 .container-detalhes img{
     width: 230px;
-    height: 350px;
+    height: 355px;
+    border-radius: 10px;
+}
+
+.datas{
+    text-align: center;
+}
+
+.inicio, .fim {
+    display: inline-block;
+    margin: 20px; 
+    width: 200px; 
+    
+}
+
+.inicio{
+    margin-left: 90px;
+}
+
+.fim{
+    margin-left: 100px;
+}
+
+.inicio button{
+    width: 187px;
+    height: 51px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    margin-top: -30px;
+    background: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.50);
+    box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+.fim button{
+    width: 187px;
+    height: 51px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    margin-top: -30px;
+    background: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.50);
+    box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+.inicio button span {
+    margin-left: 10px;
+    display: block;
 }
