--- a/BookBee/src/main/resources/templates/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/detalhesdolivro.html
@@ -107,6 +107,32 @@
                 <button id="fimButton" onclick="alterarData('fim')"><span id="dataFim">DD/MM/AAAA</span></button>
             </div>
         </div>
+        
+        <div class="modal">
+            <button class="notasP"> <a href="#">Notas Pessoais</a>
+                <a href="#"><img src="/BookBee/src/main/resources/static/img/more.png" alt="adc">   </a>
+            </button>
+            
+            <button class="resenha"> <a href="#">Resenha e Classificação</a>
+                <a href="#"><img src="/BookBee/src/main/resources/static/img/more.png" alt="adc"></a>
+            </div>
+            
+            <div class="detalhePosicao">
+            <ul>
+                <li>
+                    <p><span id="posicao" contenteditable="true">-</span></p>
+                    <p>Posição</p>
+                </li>
+                <li>
+                    <p id="numPagina"><span id="numPaginaValue" contenteditable="true" >-</span></p>
+                    <p>Páginas</p>
+                </li>
+                <li>
+                    <p><span id="velocidade" contenteditable="true">-</span></p>
+                    <p>Velocidade</p>
+                </li>
+            </ul>
+        </div>
+        
         <script src="/BookBee/src/main/resources/static/js/datas.js"></script>
-    
     </main>
