detalhes do livro

--- a/BookBee/src/main/resources/templates/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/detalhesdolivro.html
@@ -102,10 +102,12 @@
                 <h5>Data de Início</h5>
                 <button id="inicioButton" onclick="alterarData('inicio')"><span id="dataInicio">DD/MM/AAAA</span></button>
             </div>
+            <button class="check"><img src="/BookBee/src/main/resources/static/img/check.png" alt=""></button>
             <div class="fim">
                 <h5>Data de Término</h5>
                 <button id="fimButton" onclick="alterarData('fim')"><span id="dataFim">DD/MM/AAAA</span></button>
             </div>
+            <button class="check"><img src="/BookBee/src/main/resources/static/img/check.png" alt=""></button>
         </div>
         
         <div class="modal">
@@ -132,6 +134,10 @@
                     <p>Velocidade</p>
                 </li>
             </ul>
+
+            <div class="botao-adc">
+                <button class="adc">Adicionar</button>
+            </div>
         </div>
         
         <script src="/BookBee/src/main/resources/static/js/datas.js"></script>
