--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -1154,22 +1154,23 @@ body {
 }
 
 .container-detalhes{
-    width: 600px;
-    margin-top: 40px;
-    margin-left: 490px;
+    width: 650px;
+    margin-top: 30px;
+    margin-left: 515px;
     background-color: #A7886C;
     filter: drop-shadow(5px 6px 10px rgba(0, 0, 0, 0.25));
     border-radius: 10px;
 }
 
-.container-detalhes img{
-    width: 230px;
-    height: 355px;
+.capa img{
+    width: 260px;
+    height: 395px;
     border-radius: 10px;
 }
 
 .datas{
     text-align: center;
+    margin-top: 5px;
 }
 
 .inicio, .fim {
@@ -1180,7 +1181,7 @@ body {
 }
 
 .inicio{
-    margin-left: 90px;
+    margin-left: 210px;
 }
 
 .fim{
@@ -1209,14 +1210,22 @@ body {
     box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-.inicio button span {
-    margin-left: 10px;
-    display: block;
+.check {
+    border: none;
+    background: transparent;
+    vertical-align: middle;
+    margin-left: -30px; 
 }
+
+.check img{
+    width: 30px;
+    height: 30px;
+}
+
 
 .modal{
     display: flex;
-    margin-left: 450px;
+    margin-left: 500px;
     margin-top: 30px;
 }
 
@@ -1230,7 +1239,6 @@ body {
     border-radius: 5px;
     background: transparent;
     font-size: 15px;
-    color: #412E27;
     border: 1px solid rgba(0, 0, 0, 0.50);
     box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
 }
@@ -1245,6 +1253,7 @@ body {
 
 .notasP a{
     text-decoration: none;
+    color:#412E27;
 }
 
 .resenha{
@@ -1257,7 +1266,6 @@ body {
     border-radius: 5px;
     background: transparent;
     font-size: 15px;
-    color: #412E27;
     border: 1px solid rgba(0, 0, 0, 0.50);
     box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
     margin-left: 50px;
@@ -1274,11 +1282,12 @@ body {
 .resenha a{
     text-decoration: none;
     margin-left: 7px;
+    color:#412E27;
 }
 
 
 .detalhePosicao {
-    margin-left: 545px;
+    margin-left: 610px;
     width: 463px;
     height: 88px;
     flex-shrink: 0;
@@ -1301,12 +1310,29 @@ body {
     align-items: center;
     margin: 0 50px;
     border: none;
+    
 }
 
 .detalhePosicao ul li p{
     margin-top: 5px;
     font-size: 15px;
+    min-width: 5px; 
 }
-.detalhePosicao ul li p {
-    min-width: 5px; /* Largura mínima desejada */
+
+.botao-adc{
+    margin-top: 30px;
+    margin-left: 145px;
+}
+
+.adc{
+    width: 148px;
+    height: 39.921px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.50);
+    box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+    background: transparent;
+    cursor: pointer;
+    font-size: 15px;
+    margin-bottom: 20px;
 }
