--- a/BookBee/src/main/resources/templates/login.html
+++ b/BookBee/src/main/resources/templates/login.html
@@ -48,9 +48,7 @@
                     </ul>
                 </div>
                 <div class="botaologin1">
-                    <a href="/BookBee/src/main/resources/templates/main.html">
-                        <!--<a href="/principal.html">-->
-                            <button>Login</button>
+                    <button><a href="/BookBee/src/main/resources/templates/main.html">Login</a></button>
                     </a>
                 </div>
             </form>
