--- a/BookBee/src/main/resources/templates/main.html
+++ b/BookBee/src/main/resources/templates/main.html
@@ -24,7 +24,7 @@
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Home.png" alt="home">
                     <a href="/BookBee/src/main/resources/templates/main.html"></a>
-                    <span>Home</span>
+                    <span><a href="/BookBee/src/main/resources/templates/main.html">Home</a></span>
                 </span>
             </button>
     
@@ -32,23 +32,21 @@
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Goal.png" alt="meta">
                     <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
-                    <span>Metas</span>
+                    <span><a href="#">Metas</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Favorites.png" alt="Favoritos">
-                    <a href=""></a>
-                    <span>Favoritos</span>
+                    <span><a href="#">Favoritos</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
                     <img src="/BookBee/src/main/resources/static/img/Quote.png" alt="Citações">
-                    <a href=""></a>
-                    <span>Anotações</span>
+                    <span><a href="#">Anotações</a></span>
                 </span>
             </button>
     
@@ -56,7 +54,7 @@
                 <span>
                 <a href="/BookBee/src/main/resources/templates/home.html"></a>
                     <img src="/BookBee/src/main/resources/static/img/Exit.png" alt="Sair">
-                    <span>Sair</span>
+                    <span><a href="/BookBee/src/main/resources/templates/home.html">Sair</a></span>
                 </span>
             </button>
             
