--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -220,13 +220,14 @@ body {
     margin-top: -150px;
 }
 
-.titulogin {
+.titulogin  p {
     width: 20px;
     height: 30px;
     flex-shrink: 0;
-    font-size: 150px;
     text-shadow: 9px 6px 4px rgba(0, 0, 0, 0.13);
-    padding-left: 715px;
+    padding-left: 760px;
+    font-size: 150px;
+    margin-top: 130px;
 }
 
 .cor01{
@@ -244,7 +245,7 @@ body {
 }
 
 .formlogin form{
-    margin-left: 790px;
+    margin-left: 830px;
     margin-top: 150px;
     
 }
@@ -273,6 +274,7 @@ body {
     border-color: rgba(0, 0, 0, 0.50);
     margin-top: 10px;
     padding-left: 15px;
+    outline: none;
 }
 
 
@@ -293,7 +295,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding-left: 130px;
+    padding-left: 110px;
 }
 
 .cadastre ul {
@@ -309,7 +311,13 @@ body {
 }
 
 
-.botaologin1 a button{
+.botaologin1{
+    float: right;
+    margin-right: 350px;
+    margin-top: 25px;
+}
+
+.botaologin1 button{
     width: 170px;
     height: 50px;
     flex-shrink: 0;
@@ -322,10 +330,11 @@ body {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
-    float: right;
-    margin-right: 409px;
-    margin-top: 25px;
+    line-height: normal;   
+}
+
+.botaologin1 button a{
+    color: #412E27;
 }
 
 .livro01{
@@ -436,14 +445,14 @@ body {
     margin-top: -110px;
 }
 
-.titulocas {
+.titulocas p{
     width: 200px;
     height: 30px;
     flex-shrink: 0;
     font-size: 150px;
     text-shadow: 9px 6px 4px rgba(0, 0, 0, 0.13);
     padding-left: 670px;
-    margin-top: -40px;
+    margin-top: 100px;
 }
 
 .titulocas p span.cor01 {
@@ -494,6 +503,7 @@ body {
     border-color: rgba(0, 0, 0, 0.50);
     margin-top: 10px;
     padding-left: 15px;
+    outline: none;
 }
 
 .logar {
@@ -517,11 +527,12 @@ body {
     font-weight: 400;
     line-height: normal;
 }
+
 .botaocadastro1{
     padding-left: 915px;
 }
 
-.botaocadastro1 a button{
+.botaocadastro1 button{
     width: 170px;
     height: 50px;
     flex-shrink: 0;
@@ -534,9 +545,14 @@ body {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
-    margin-top: 15px;
+    line-height: normal; 
+    margin-top: 15px;  
 }
+
+.botaocadastro1 button a{
+    color: #412E27;
+}
+
 
 .livro04{
     width: 130px;
@@ -673,14 +689,14 @@ body {
     height: 65px;
     background: transparent;
     border: 0;
-    color: #412E27;
     cursor: pointer;
     text-shadow: 5px 6px 10px rgba(0, 0, 0, 0.4);
     margin-top: 15px;
     margin-left: 10px;
 }
 
-.sidebar button span{
+.sidebar button span a{
+    color: #412E27;
     font-size: 25px;
 }
 
@@ -751,6 +767,7 @@ body {
     background: #FCFCFC;
     box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.25);
     padding-left: 20px;
+    outline: none;
 }
 
 .barradepes img{
