--- a/BookBee/src/main/resources/templates/main.html
+++ b/BookBee/src/main/resources/templates/main.html
@@ -68,13 +68,13 @@
 
     <main class="main">
         <div class="usuario">
-            <img class="image" src="/BookBee/src/main/resources/static/img/user.png" alt="Foto do Usuário">
-            </p id="username">Nome do Usuário</p> 
+            <a href="#"><img src="/BookBee/src/main/resources/static/img/user.png" alt="Foto do Usuário"></a>
+            <p id="username">Nome do Usuário</p> 
         </div>
 
         <div class="barradepes">
             <input type="text" class="search-txt" placeholder="Encontre o livro que você gosta...">
-            <a href="#">
+            <a href="/BookBee/src/main/resources/templates/busca.html">
                 <img src="/BookBee/src/main/resources/static/img/lupa.png" alt="Lupa">
                  
             </a>
@@ -123,7 +123,7 @@
     <div class="container-metas" id="metaLeitura">
         <div class="titulo-metas">
             <p>Metas de Leitura</p>
-            <a href="#">Todas</a>
+            <a href="/BookBee/src/main/resources/templates/metas.html">Todas</a>
             <img class="todos-mais" src="/BookBee/src/main/resources/static/img/mais.png" alt="Mais">
         </div>
     </div>
@@ -152,7 +152,7 @@
     <div class="container-favoritos" id="favoritos">
         <div class="titulo-favoritos">
             <p>Favoritos</p>
-            <a href="#">Todos</a>
+            <a href="/BookBee/src/main/resources/templates/favoritos.html">Todos</a>
             <img class="todos-mais" src="/BookBee/src/main/resources/static/img/mais.png" alt="Mais">
         </div>
     </div>
@@ -182,7 +182,7 @@
     <div class="container-citacao" id="citacao">
         <div class="titulo-citacao">
             <p>Notas Pessoais</p>
-            <a href="#">Todas</a>
+            <a href="/BookBee/src/main/resources/templates/notas.html">Todas</a>
         </div>
     </div>
 
