--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -735,26 +735,31 @@ body {
     
 }
 
-.usuario{
-    display: flex;
+.usuario {
+    display: flex; /* Tornar o contêiner .usuario um flex container */
     align-items: center;
-    font-size: 20px;
-    margin-left: 230px;
     margin-top: 40px;
     color: rgba(0, 0, 0, 0.60);
+    margin-left: 220px; /* Ajuste a margem esquerda conforme necessário */
 }
 
-.image{
+.usuario p {
+    margin-top: 20px;
+    margin-left: 10px;
+    font-size: 20px;
+}
+
+.usuario a img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 10px;
     box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.25);
 }
 
+
 .barradepes{
     margin-left: 230px;
-    margin-top: 55px;
+    margin-top: 35px;
     
 }
 
@@ -1352,4 +1357,64 @@ body {
     cursor: pointer;
     font-size: 15px;
     margin-bottom: 20px;
+}
+
+.adc-livro{
+    margin-top: 50px;
+    margin-left: 350px;
+}
+
+.adc-livro button{
+    width: 199px;
+    height: 300px;
+    flex-shrink: 0;
+    stroke-width: 2px;
+    stroke: #412E27;
+    border-radius: 5px;
+    background: none;
+    cursor: pointer;
+}
+
+.caixa-notas-adc{
+    width: 360px;
+    height: 150px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #878C69;
+    box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+    margin-left: 20%;
+    margin-top: 50px;
+}
+
+.conteudo-adc {
+    display: flex; /* Torna os elementos filhos flexíveis */
+    flex-direction: column;
+    margin-left: 120px;
+    margin-top: -170px;
+}
+
+.caixa-notas-adc img{
+    width: 120px;
+    height: 170px;
+    z-index: 1;
+    margin-top: -9px;
+    margin-left: -10px;
+    border-radius: 5px;
+}
+
+.conteudo-adc h2, p {
+    margin-top:-10px ;
+    font-size: 14px;
+    color: #3E4320; /* Cor do título e texto */
+}
+
+.resultadoPesquisa{
+    width: 360px;
+    height: 150px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #878C69;
+    box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+    margin-left: 20%;
+    margin-top: 50px;
 }
