--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -758,6 +758,7 @@ body {
 
 
 .barradepes{
+    width: 390px;
     margin-left: 230px;
     margin-top: 35px;
     
@@ -1410,11 +1411,70 @@ body {
 
 .resultadoPesquisa{
     width: 360px;
-    height: 150px;
+    height: 10px;
     flex-shrink: 0;
     border-radius: 5px;
     background: #878C69;
     box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
-    margin-left: 20%;
-    margin-top: 50px;
+    margin-left: 16%;
+    margin-top: 80px;
+}
+
+.conteudoLivros {
+    width: 570px;
+    height: 190px;
+    background-color: #878C69;
+    border-radius: 5px;
+    color: #3E4320;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;  
+}
+
+.resultGrid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 80px 90px;
+    padding: 0;
+}
+
+#btnBuscar{
+    all: unset;
+    cursor: pointer;
+    outline: revert;
+
+}
+
+.conteudoLivros img{
+    width: 150px;
+    height: 230px;
+    margin-top: -40px;
+    margin-left: -20px;
+    border-radius: 5px;
+}
+
+.conteudoLivros li{
+    width: 425px;
+    height: 20px;
+    flex-shrink: 0;
+    margin-bottom: 100px;
+    color: #30351B;
+    font-family: Belleza;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.conteudoLivros button{
+    width: 142px;
+    height: 41px;
+    background: transparent;
+    font-size: 15px;
+    border-radius: 10px;
+    border: 1px solid rgba(48, 53, 27, 0.50);
+    box-shadow: 5px 6px 10px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 70px;
+    margin-left: 80px;
+    cursor: pointer;
 }
